# test-polars

./: .gitattribiutes  .gitignore  Cargo.toml  README.md  pyproject.toml  run.ps1  run.sh  taskfile.yaml
src/: main.rs
src/test_polars/: __init__.py  __main__.py  _cli.py
src/test_polars/utils/: __init__.py  csv.py  process_csv.py  process_data.py
src/utils/: mod.rs  process_csv.rs  process_data.rs
test/data/: ip_request.csv  ip_response.csv
