[package]
name = "test-polars"
version = "0.1.0"
edition = "2021"
description = "Add your description here"
readme = "README.md"
authors = ["Krystian Krakowski <kkrakowski22@gmail.com>"]
rust-version = "1.83.0"

[dependencies]
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.22"
polars = { version = "0.45.1", features = ["semi_anti_join"] }
