[package]
name = "test-polars"
version = "0.1.0"
edition = "2024"
description = "Add your description here"
readme = "README.md"
authors = ["Krystian Krakowski <kkrakowski22@gmail.com>"]
rust-version = "1.86.0"

[dependencies]
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
polars = { version = "0.48", features = ["semi_anti_join"] }
