[project]
name = "test-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Krystian Krakowski", email = "kkrakowski22@gmail.com" }
]
requires-python = "~=3.13.0"
dependencies = [
    "polars==1.37.1",
    "typer==0.21.1",
]

[project.scripts]
test-polars = "test_polars.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "ruff==0.14.14",
    "pyright==1.1.408",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
    "COM812",
    "PLR2004",
    "PYI034",
    "S101",
    "T201",
    "ICN001",
    "PYI029",
    "RUF100"
]

[tool.pyright]
pythonVersion = "3.13"
reportMissingModuleSource = false
